--- a/src/app/components/tabla-pokemon/tabla-pokemon.component.html
+++ b/src/app/components/tabla-pokemon/tabla-pokemon.component.html
@@ -1,1 +1,49 @@
-<p>tabla-pokemon works!</p>
+<div class="flex justify-content-center">
+	<img src="../../../assets/poke-title.png" />
+</div>
+<p-card
+	class="flex justify-content-center flex-wrap"
+	[style]="{ width: '50rem', marginBottom: '2rem' }"
+>
+	<p-table
+		[value]="pokemon"
+		[paginator]="true"
+		[rows]="5"
+		[tableStyle]="{ 'min-width': '50rem' }"
+		[rowsPerPageOptions]="[5, 10, 20]"
+	>
+		<ng-template pTemplate="header">
+			<tr>
+				<th>Id</th>
+				<th>Nombre</th>
+				<th>Más detalles</th>
+			</tr>
+		</ng-template>
+		<ng-template pTemplate="body" let-pokemon>
+			<tr>
+				<td>{{ pokemon.id }}</td>
+				<td>{{ pokemon.name }}</td>
+				<td>
+					<p-button
+						(click)="detallesPokemon(pokemon.id)"
+						icon="pi pi-plus"
+					/>
+					<p-dialog
+						[(visible)]="dialogVisible"
+						[modal]="true"
+						[style]="{ width: '25rem' }"
+						header="Info Pokemon"
+					>
+						<p-tag
+							severity="success"
+							*ngFor="let type of pokemon.types"
+							[rounded]="true"
+							[value]="type"
+						>
+						</p-tag>
+					</p-dialog>
+				</td>
+			</tr>
+		</ng-template>
+	</p-table>
+</p-card>
