--- a/src/app/resources/shared/components/header/header.component.html
+++ b/src/app/resources/shared/components/header/header.component.html
@@ -7,6 +7,6 @@
 />
 
 <header class="bg-red-500 combo-regular mb-6">
-	<img class="pl-6" src="/src/assets/images/klipartz.com.png" height="50" />
-		<img width="100px" src="/src/assets/images/poke-title.png" />
+	<img class="pl-6" src="/assets/images/klipartz.com.png" height="50" />
+		<img width="100px" src="/assets/images/poke-title.png" />
 </header>
