--- a/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
+++ b/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
@@ -1,5 +1,3 @@
-
-
 <p-card
 	class="flex justify-content-center flex-wrap"
 	[style]="{ width: '50rem', marginBottom: '2rem' }"
@@ -24,67 +22,12 @@
 				<td>{{ pokemon.name }}</td>
 				<td>
 					<p-button
-						(click)="verDetalles(pokemon)"
 						icon="pi pi-eye"
+						styleClass="p-button-rounded p-button-info p-button-sm"
+						[routerLink]="['/pokemon', pokemon.id]"
 					/>
 				</td>
 			</tr>
 		</ng-template>
 	</p-table>
 </p-card>
-
-<p-dialog
-	header="Info Pokemon"
-	[(visible)]="dialogVisible"
-	[modal]="true"
-	[style]="{ width: '50rem' }"
->
-<div *ngIf="selectedPokemon" class="flex gap-4">
-			<!-- Card izq -->
-		<p-card class="flex-shrink-0" [style]="{ width: '20rem' }">
-			<div class="flex flex-column align-items-center gap-3">
-				<p><strong>ID:</strong> {{ selectedPokemon.id }}</p>
-				<img
-					[src]="selectedPokemon.spriteUrl"
-					[alt]="'Sprite de ' + selectedPokemon.name"
-					style="width: 200px"
-				/>
-				<p>
-					<strong>Nombre:</strong>
-					{{ selectedPokemon.name | titlecase }}
-				</p>
-				<p><strong>ID:</strong> {{ selectedPokemon.id }}</p>
-			</div>
-		</p-card>
-
-		<p-card class="flex-grow-1" [style]="{ width: '25rem' }">
-			<div class="flex flex-column gap-4">
-				<!-- Tipos -->
-				<div>
-					<h4>Tipos</h4>
-					<div class="flex flex-wrap gap-2">
-						<p-tag
-							*ngFor="let type of selectedPokemon.types"
-							[value]="type"
-							severity="success"
-							[rounded]="true"
-						/>
-					</div>
-				</div>
-
-				<!-- Habilidades -->
-				<div>
-					<h4>Habilidades</h4>
-					<div class="flex flex-wrap gap-2">
-						<p-tag
-							*ngFor="let ability of selectedPokemon.abilities"
-							[value]="ability"
-							severity="info"
-							[rounded]="true"
-						/>
-					</div>
-				</div>
-			</div>
-		</p-card>
-	</div>
-</p-dialog>
