pagination not working

--- a/src/app/resources/shared/components/pokemon-detalles/pokemon-detalles.component.html
+++ b/src/app/resources/shared/components/pokemon-detalles/pokemon-detalles.component.html
@@ -1,26 +1,24 @@
+<h1 class="flex justify-content-center flex-wrap">Información del Pokémon</h1>
 <div class="flex justify-content-center flex-wrap">
 	<div *ngIf="pokemon" class="flex gap-4">
 		<!-- Card izq -->
 		<p-card id="card1" class="flex-shrink-0" [style]="{ width: '20rem' }">
 			<div class="flex flex-column align-items-center gap-3">
-				<p><strong>ID:</strong> {{ pokemon.id }}</p>
+				<h2>ID:{{ pokemon.id }}</h2>
 				<img
 					[src]="pokemon.sprites.front_default"
 					style="width: 200px"
 				/>
-				<p>
-					<strong>Nombre:</strong>
-					{{ pokemon.name | titlecase }}
-				</p>
+				<h2>Nombre:{{ pokemon.name | titlecase }}</h2>
 			</div>
 		</p-card>
 
-        <!-- Card der -->
+		<!-- Card der -->
 		<p-card id="card2" class="flex-grow-1" [style]="{ width: '25rem' }">
 			<div class="flex flex-column gap-4">
 				<!-- Tipos -->
 				<div>
-					<h4>Tipos</h4>
+					<h2>Tipos</h2>
 					<div class="flex flex-wrap gap-2">
 						<p-tag
 							*ngFor="let type of pokemon.types"
@@ -33,7 +31,7 @@
 
 				<!-- Habilidades -->
 				<div>
-					<h4>Habilidades</h4>
+					<h2>Habilidades</h2>
 					<div class="flex flex-wrap gap-2">
 						<p-tag
 							*ngFor="let ability of pokemon.abilities"
