id, nombre y tipos de uno (url)

--- a/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
+++ b/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
@@ -1,37 +1,3 @@
-<div class="flex justify-content-center">
-	<p-card class="flex justify-content-center flex-wrap">
-		<p-table
-			[value]="pokemonList"
-			[paginator]="true"
-			[rows]="rows"
-			[totalRecords]="totalRecords"
-			[first]="first"
-			[tableStyle]="{ 'min-width': '50rem' }"
-			[rowsPerPageOptions]="[5, 20, 30]"
-			(onPageChange)="onPageChange($event)"
-			[showCurrentPageReport]="true"
-			currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-		>
-			<ng-template pTemplate="header">
-				<tr>
-					<th class="text-center bg-red-300">ID</th>
-					<th class="text-center bg-red-300">Nombre</th>
-					<th class="text-center bg-red-300">Más detalles</th>
-				</tr>
-			</ng-template>
-			<ng-template pTemplate="body" let-pokemon>
-				<tr>
-					<td class="text-center bg-red-100">{{ pokemon.id }}</td>
-					<td class="text-center">{{ pokemon.name }}</td>
-					<td class="text-center">
-						<p-button
-							icon="pi pi-eye"
-							styleClass="p-button-rounded"
-							[routerLink]="['/pokemon', pokemon.id]"
-						/>
-					</td>
-				</tr>
-			</ng-template>
-		</p-table>
-	</p-card>
-</div>
+<p>{{ littlePokemon.id }}</p>
+<p>{{ littlePokemon.name }}</p>
+<p>{{ littlePokemon.types }}</p>
