--- a/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
+++ b/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
@@ -1,3 +1,31 @@
-<p>{{ littlePokemon.id }}</p>
-<p>{{ littlePokemon.name }}</p>
-<p>{{ littlePokemon.types }}</p>
+<p-card
+	class="flex justify-content-center flex-wrap"
+	[style]="{ width: '50rem', marginBottom: '2rem' }"
+>
+	<p-table
+		[value]="littlePokemon"
+		[paginator]="true"
+		[rows]="5"
+		[tableStyle]="{ 'min-width': '50rem' }"
+		[rowsPerPageOptions]="[5, 10, 20]"
+	>
+		<ng-template pTemplate="header">
+			<tr>
+				<th>ID</th>
+				<th>Nombre</th>
+				<th>Tipos</th>
+			</tr>
+		</ng-template>
+		<ng-template pTemplate="body" let-pokemon>
+			<tr>
+				<td>{{ pokemon.id }}</td>
+				<td>{{ pokemon.name }}</td>
+				<td>
+					@for (type of pokemon.types; track type) {
+					<p-tag [value]="type.type.name"></p-tag>
+					}
+				</td>
+			</tr>
+		</ng-template>
+	</p-table>
+</p-card>
