--- a/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
+++ b/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
@@ -18,7 +18,7 @@
 		</ng-template>
 		<ng-template pTemplate="body" let-pokemon>
 			<tr>
-				<td>{{ pokemon.id }}</td>
+				<td>{{ extraerId(pokemon.url) }}</td>
 				<td>{{ pokemon.name }}</td>
 				<td>
 					<p-button
