buena estructura en las cards del Dialog

--- a/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
+++ b/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
@@ -30,32 +30,58 @@
 						header="Info del pokemon"
 						[modal]="true"
 						[(visible)]="visible"
-						[style]="{ width: '25rem' }"
+						[style]="{ width: '45rem' }"
 						*ngIf="pokemonSeleccionado"
 					>
-						<p-card
-							class="flex justify-content-start flex-wrap"
-							[style]="{ width: '50rem', marginBottom: '2rem' }"
-						>
-							<p><strong>ID</strong></p>
-							{{ pokemonSeleccionado.id }}
-							<br /><img [src]="pokemonSeleccionado.sprites.front_default" />
-							<p><strong>Nombre</strong></p>
-							{{ pokemonSeleccionado.name }}
-						</p-card>
-						<p-card
-							class="flex justify-content-center flex-wrap"
-							[style]="{ width: '50rem', marginBottom: '2rem' }"
-						>
-							<p><strong>Tipos</strong></p>
-							@for (type of pokemonSeleccionado.types; track type) {
-							<p-tag [value]="type.type.name"></p-tag>
-							}
-							<p><strong>Habilidades</strong></p>
-							@for(ability of pokemonSeleccionado.abilities; track ability){
-							<p-tag [value]="ability.ability.name"></p-tag>
-							}
-						</p-card>
+						<div class="flex flex-row gap-3">
+							<p-card
+								class="flex justify-content-start flex-wrap"
+								[style]="{
+									width: '20rem',
+									marginBottom: '2rem'
+								}"
+							>
+							<div class="flex flex-column align-items-center justify-content-center gap-2">
+								<p><strong>ID</strong></p>
+								{{ pokemonSeleccionado.id }}
+								<br /><img
+									[src]="
+										pokemonSeleccionado.sprites
+											.front_default
+									"
+								/>
+								<p><strong>Nombre</strong></p>
+								{{ pokemonSeleccionado.name }}
+							</div>
+							</p-card>
+							<p-card
+								class="flex justify-content-center flex-wrap"
+								[style]="{
+									width: '20rem',
+									marginBottom: '2rem'
+								}"
+							>
+							<div class="flex flex-column align-items-center gap-2">
+								<p><strong>Tipos</strong></p>
+								<div class="flex gap-2 flex-wrap">
+									@for (type of pokemonSeleccionado.types;
+									track type) {
+									<p-tag [value]="type.type.name"></p-tag>
+									}
+								</div>
+								<p><strong>Habilidades</strong></p>
+								<div class="flex gap-2 flex-wrap">
+									@for(ability of
+									pokemonSeleccionado.abilities; track
+									ability){
+									<p-tag
+										[value]="ability.ability.name"
+									></p-tag>
+									}
+								</div>
+							</div>
+							</p-card>
+						</div>
 					</p-dialog>
 				</td>
 			</tr>
