--- a/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.scss
+++ b/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.scss
@@ -5,10 +5,10 @@ body {
 	color: black !important; /* Amarillo dorado */
 	filter: brightness(1.2); /* Opcional: ajusta el brillo */
 }
-.custom-yellow-button {
+.yellow {
 	background-color: #ffe969 !important; /* Amarillo */
 	border-color: #ffe969 !important; /* Opcional: borde amarillo */
 }
-.custom-yellow-button:hover {
+.yellow:hover {
 	background-color: #ecd13a !important; /* Naranja */
 }
