--- a/src/app/resources/shared/components/detalles/detalles.component.scss
+++ b/src/app/resources/shared/components/detalles/detalles.component.scss
@@ -1,3 +1,14 @@
 body {
 	background-color: rgb(162, 162, 162);
 }
+.p-button {
+	color: black !important; /* Amarillo dorado */
+	filter: brightness(1.2); /* Opcional: ajusta el brillo */
+}
+.yellow {
+	background-color: #ffe969 !important; /* Amarillo */
+	border-color: #ffe969 !important; /* Opcional: borde amarillo */
+}
+.yellow:hover {
+	background-color: #ecd13a !important; /* Naranja */
+}
