--- a/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
+++ b/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
@@ -2,19 +2,7 @@
 	class="flex justify-content-center flex-wrap"
 	[style]="{ width: '55rem', marginBottom: '2rem' }"
 >
-	<p-table
-		[value]="littlePokemon"
-		[paginator]="true"
-		[lazy]="true"
-		[rows]="rows"
-		[first]="first"
-		[totalRecords]="paginacion.count"
-		[showCurrentPageReport]="true"
-		[tableStyle]="{ 'min-width': '50rem' }"
-		(onLazyLoad)="pageChange($event)"
-		currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Pokemons"
-		[rowsPerPageOptions]="[5, 10, 25, 50]"
-	>
+	<p-table [value]="littlePokemon" [tableStyle]="{ 'min-width': '50rem' }">
 		<ng-template pTemplate="header">
 			<tr>
 				<th width="20%" class="text-center bg-red-300">ID</th>
@@ -24,7 +12,9 @@
 		</ng-template>
 		<ng-template pTemplate="body" let-pokemon>
 			<tr>
-				<td width="20%" class="text-center">{{ extraerId(pokemon.url) }}</td>
+				<td width="20%" class="text-center">
+					{{ extraerId(pokemon.url) }}
+				</td>
 				<td width="20%" class="text-center">{{ pokemon.name }}</td>
 				<td width="20%" class="text-center">
 					<p-button
@@ -37,4 +27,17 @@
 			</tr>
 		</ng-template>
 	</p-table>
+	<div class="flex justify-content-center">
+		<p-paginator
+			(onPageChange)="onPageChange($event)"
+			[first]="first"
+			[rows]="rows"
+			[totalRecords]="paginacion.count"
+			[showCurrentPageReport]="true"
+			[showPageLinks]="true"
+			[showJumpToPageDropdown]="false"
+			currentPageReportTemplate="Showing {first} to {last} of {totalRecords}"
+			[rowsPerPageOptions]="[5, 10, 25, 50]"
+		/>
+	</div>
 </p-card>
