Primer commit - añadir proyecto inicial

--- a/src/app/resources/shared/components/header/header.component.html
+++ b/src/app/resources/shared/components/header/header.component.html
@@ -1,5 +1,10 @@
-
-<header class="bg-red-500 combo-regular mb-5">
+<header class="bg-red-500 mb-5">
 	<img class="pl-6" src="/assets/images/klipartz.com.png" height="50" />
+	<a [routerLink]="['/']">
 		<img width="100px" src="/assets/images/poke-title.png" />
+	</a>
+	<p-iconfield iconPosition="left">
+		<!--<p-inputicon styleClass="pi pi-search" class="text-color" />-->
+		<!--<input type="text" pInputText class="ml-6" />-->
+	</p-iconfield>
 </header>
