--- a/src/app/resources/shared/components/header/header.component.scss
+++ b/src/app/resources/shared/components/header/header.component.scss
@@ -8,9 +8,6 @@ html {
 	margin: 0 !important;
 	padding: 0 !important;
 }
-//letra de google fonts
-.combo-regular {
-	font-family: "Combo", system-ui;
-	font-weight: 100;
-	font-style: small;
+p-iconfield{
+	margin-left: 25%;
 }
