--- a/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
+++ b/src/app/resources/shared/components/tabla-pokemon/tabla-pokemon.component.html
@@ -2,7 +2,20 @@
 	class="flex justify-content-center flex-wrap"
 	[style]="{ width: '55rem', marginBottom: '2rem' }"
 >
-	<p-table [value]="littlePokemon" [tableStyle]="{ 'min-width': '50rem' }">
+	<p-table
+		[value]="littlePokemon"
+		[showCurrentPageReport]="true"
+		[showPageLinks]="true"
+		[paginator]="true"
+		[lazy]="true"
+		[first]="first"
+		[rows]="rows"
+		[totalRecords]="paginacion.count"
+		(onLazyLoad)="onPage($event)"
+		currentPageReportTemplate="Showing {first} to {last} of {totalRecords}"
+		[scrollable]="false"
+		[rowsPerPageOptions]="[5, 10, 25, 50]"
+	>
 		<ng-template pTemplate="header">
 			<tr>
 				<th width="20%" class="text-center bg-red-300">ID</th>
@@ -27,17 +40,5 @@
 			</tr>
 		</ng-template>
 	</p-table>
-	<div class="flex justify-content-center">
-		<p-paginator
-			(onPageChange)="onPageChange($event)"
-			[first]="first"
-			[rows]="rows"
-			[totalRecords]="paginacion.count"
-			[showCurrentPageReport]="true"
-			[showPageLinks]="true"
-			[showJumpToPageDropdown]="false"
-			currentPageReportTemplate="Showing {first} to {last} of {totalRecords}"
-			[rowsPerPageOptions]="[5, 10, 25, 50]"
-		/>
-	</div>
+	<div class="flex justify-content-center"></div>
 </p-card>
